--- a/Jay's nice code.ipynb
+++ b/Jay's nice code.ipynb
@@ -483,6 +483,286 @@
    "source": [
     "#adding elements\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LESSON 5(cause i have no time to update the last lesson's notes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 8, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#.sort sorts numbers from biggest to smallest\n",
+    "list1 = [8,3,5,1,11]\n",
+    "list1.sort()\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#.index shows the index number of a element in a list\n",
+    "list2 = [8,3,5,1,11]\n",
+    "list2.index(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionaries!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prac1': 'etc.', 'prac2': 'exp', 'prac3': 'overide'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ceating dictionaries\n",
+    "pracDictionary = {\"prac1\": \"etc.\",\"prac2\": \"exp\",\"prac3\": \"overide\"}\n",
+    "print(pracDictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fruit 1': 'Apple', 'fruit 2': 'Orange', 'fruit 3': 'Banana'}\n",
+      "Apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example(yeah,you can press enter and it'll still work)\n",
+    "myDictionary = {\n",
+    "  \"fruit 1\": \"Apple\",\n",
+    "  \"fruit 2\": \"Orange\",\n",
+    "  \"fruit 3\": \"Banana\"\n",
+    "}\n",
+    "print(myDictionary)\n",
+    "print(myDictionary[\"fruit 1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pear\n"
+     ]
+    }
+   ],
+   "source": [
+    "#yall can't have same keys(you can, but it'll overlap)\n",
+    "wrongDic = {\n",
+    "    \"wrongkey1\": \"Apple\",\n",
+    "    \"wrongkey1\": \"Pear\"\n",
+    "}\n",
+    "print(wrongDic[\"wrongkey1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "proof it changed before photo: {'fruit 1': 'Apple', 'fruit 2': 'Orange', 'fruit 3': 'Banana'}\n",
+      "after photo: {'fruit 1': 'rottenApple', 'fruit 2': 'Orange', 'fruit 3': 'Banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#changing values in dictionaries\n",
+    "myDictionary = {\n",
+    "  \"fruit 1\": \"Apple\",\n",
+    "  \"fruit 2\": \"Orange\",\n",
+    "  \"fruit 3\": \"Banana\"\n",
+    "}\n",
+    "print(\"proof it changed before photo:\",myDictionary)\n",
+    "myDictionary[\"fruit 1\"] = \"rottenApple\"\n",
+    "print(\"after photo:\",myDictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rubbish': 'adidas'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#adding new key-value pairs to a dictionary(works like .append)\n",
+    "Dic = {\n",
+    "    \"rubbish\": \"adidas\"\n",
+    "}\n",
+    "print(Dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rubbish': 'adidas', 'overpriced': 'Apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dic[\"overpriced\"] = \"Apple\"\n",
+    "print (Dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'overpriced': 'Apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#removing key-value pairs\n",
+    "del Dic[\"rubbish\"]\n",
+    "print(Dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Hello': 'Guys!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#another use for it\n",
+    "google = {'Hello' : 'world!'}\n",
+    "google['Hello'] = 'Guys!'\n",
+    "print(google)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nesting Dictionaries(dictionary inside a dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'items': ['table', 'chair', 'pen']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#example(list in dictionary)\n",
+    "something = {'items':['table','chair','pen']}\n",
+    "print(something)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chair\n"
+     ]
+    }
+   ],
+   "source": [
+    "#getting 'chair ' out\n",
+    "print(something['items'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nested dictionary\n",
+    "anything = "
+   ]
   }
  ],
  "metadata": {
