--- a/Jay's nice code.ipynb
+++ b/Jay's nice code.ipynb
@@ -327,9 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heyheyhey\n"
+     ]
+    }
+   ],
    "source": [
     "x = 1.57\n",
     "\n",
@@ -714,7 +722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nesting Dictionaries(dictionary inside a dictionary)"
+    "# Nesting Dictionaries(dictionary inside a dictionary)WIP"
    ]
   },
   {
@@ -756,13 +764,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-fed20fbde715>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-fed20fbde715>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    anything =\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#nested dictionary\n",
     "anything = "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LESSON 6-B O O L E A N"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### boolean is basically y/n quiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#it helps check if something is there/true or false\n",
+    "#Example\n",
+    "name_list = ['Lisa', 'Thomas', 'Eric']\n",
+    "print('Lisa' in name_list) # to check if 'Lisa' is in name_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#nother thing to note that it can be used for variables\n",
+    "x = 1\n",
+    "print(x == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All the operators\n",
+    "\n",
+    "Operators| Meaning\n",
+    "--------|---------\n",
+    " == | Equal\n",
+    " != | Not equal\n",
+    " >  | More than\n",
+    " >= | More than or Equal to\n",
+    " <  | Less than\n",
+    " <= | Less than or Equal to"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boolean value of == : False\n",
+      "Boolean value of != : True\n",
+      "Boolean value of > : False\n",
+      "Boolean value of >= : False\n",
+      "Boolean value of < : True\n",
+      "Boolean value of <= : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example\n",
+    "variable1 = 5\n",
+    "variable2 = 10\n",
+    "\n",
+    "print(\"Boolean value of == :\",variable1 == variable2)\n",
+    "print(\"Boolean value of != :\",variable1 != variable2)\n",
+    "print(\"Boolean value of > :\",variable1 > variable2)\n",
+    "print(\"Boolean value of >= :\",variable1 >= variable2)\n",
+    "print(\"Boolean value of < :\",variable1 < variable2)\n",
+    "print(\"Boolean value of <= :\",variable1 <= variable2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can John give 5 sweets?  True\n",
+      "Can Sally give 5 sweets?  False\n",
+      "Can John give 3 sweets?  True\n",
+      "Can Sally give 3 sweets?  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#example\n",
+    "Mary = 0\n",
+    "\n",
+    "John = 5\n",
+    "\n",
+    "Sally = 3\n",
+    "\n",
+    "#If John and Sally needs to give 5 each\n",
+    "print(\"Can John give 5 sweets? \", John >= 5)\n",
+    "print(\"Can Sally give 5 sweets? \", Sally >= 5)\n",
+    "\n",
+    "#If John and Sally needs to give 3 each\n",
+    "print(\"Can John give 3 sweets? \", John >= 3)\n",
+    "print(\"Can Sally give 3 sweets? \", Sally >= 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 7-if,else,elif (cause im as fast as GAS GAS GAS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### it's basically the same thing as Scratch:if it is correct/wrong,(do something).if else,(do something)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "if im not dumb,x should be 1\n",
+      "ay,im correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "#basic example with only if\n",
+    "x = 1\n",
+    "print(\"if im not dumb,x should be 1\")\n",
+    "if x == 1:\n",
+    "    print(\"ay,im correct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "if im not dumb,x should be 1\n",
+      "bruh me ..d..du..\n",
+      "..how spell dumb\n"
+     ]
+    }
+   ],
+   "source": [
+    "#example of if and else used together\n",
+    "x = 1 * 2\n",
+    "print(\"if im not dumb,x should be 1\")\n",
+    "if x == 1 * 2 == 1:\n",
+    "    print(\"ay im not dumb\")\n",
+    "else:\n",
+    "    print(\"bruh me ..d..du..\")\n",
+    "    print(\"..how spell dumb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### IMPORTANT-ALWAYS REMEMBER YOUR INDENTS[Tab]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example 1\n",
+      "Example 2\n",
+      "New variable1 =  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#when a idiot forgets his indent\n",
+    "print('Example 1')\n",
+    "variable1 = 10\n",
+    "if variable1 == 11:\n",
+    "    variable1 = variable1 + 100\n",
+    "    print('This condition adds 100 to variable1')\n",
+    "    print(\"New variable1 = \", variable1)\n",
+    "\n",
+    "print('Example 2')\n",
+    "variable1 = 10\n",
+    "if variable1 == 11:\n",
+    "    variable1 = variable1 + 100\n",
+    "    print('This condition adds 100 to variable1')\n",
+    "print(\"New variable1 = \", variable1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### as you can see,because of the mistake,the final print(\" \")in example 2 is not part of the if statement,it is still printed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### elif-when you have more than 1 condition/rule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is equal to 5\n",
+      "\n",
+      "\n",
+      "number is more than 5\n",
+      "\n",
+      "\n",
+      "number is less than 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example\n",
+    "myNumber = 5\n",
+    "if myNumber == 5:\n",
+    "    print(\"number is equal to 5\")\n",
+    "elif myNumber < 5:\n",
+    "    print(\"number is less than 5\")\n",
+    "else:\n",
+    "    print(\"number is more than 5\")\n",
+    "\n",
+    "    \n",
+    "print('\\n')\n",
+    "    \n",
+    "\n",
+    "myNumber = 10\n",
+    "if myNumber == 5:\n",
+    "    print(\"number is equal to 5\")\n",
+    "elif myNumber < 5:\n",
+    "    print(\"number is less than 5\")\n",
+    "else:\n",
+    "    print(\"number is more than 5\")\n",
+    "    \n",
+    "    \n",
+    "print('\\n')\n",
+    "    \n",
+    "\n",
+    "myNumber = 1\n",
+    "if myNumber == 5:\n",
+    "    print(\"number is equal to 5\")\n",
+    "elif myNumber < 5:\n",
+    "    print(\"number is less than 5\")\n",
+    "else:\n",
+    "    print(\"number is more than 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
