--- a/Jay's nice code.ipynb
+++ b/Jay's nice code.ipynb
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "#ceating dictionaries\n",
+    "#creating dictionaries\n",
     "pracDictionary = {\"prac1\": \"etc.\",\"prac2\": \"exp\",\"prac3\": \"overide\"}\n",
     "print(pracDictionary)"
    ]
@@ -1081,6 +1081,157 @@
     "    print(\"number is less than 5\")\n",
     "else:\n",
     "    print(\"number is more than 5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LESSON 8-FOR LOOPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for loops are just    print('')*[enter no. here]    ,but do more complicated things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellohellohellohellohellohellohellohello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#normal loop 4 noobs\n",
+    "print('hello'*8)\n",
+    "# or\n",
+    "print(\"Hello\")\n",
+    "print(\"Hello\")\n",
+    "print(\"Hello\")\n",
+    "print(\"Hello\")\n",
+    "print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while cool people do this:\n",
+    "for i in range(5):\n",
+    "    print(\"Hello\")\n",
+    "#btw, i is just a random variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#if you print i...(The variable^)\n",
+    "                               \n",
+    "print(i)\n",
+    "#this is because they count the zero at the front, but since it is a zero,ofc it won't count\n",
+    "#PS the variable i is a temporary variable\n",
+    "#also,'temporary variable'is just a fancy name given to it-its just a variable that changes until the loop ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "coconut\n"
+     ]
+    }
+   ],
+   "source": [
+    "#another example\n",
+    "myList = [\"apple\",\"banana\",\"coconut\"]\n",
+    "for fruit in myList:\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TRAVERSING TUPLES AND LISTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "coconut\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [\"apple\",\"banana\",\"coconut\"]\n",
+    "\n",
+    "for index in range(len(myList)):\n",
+    "    print(myList[index])\n",
+    "#len counts the amount of things in (mylist),so it means the amount of times it needs to repeat is the amount of things \n",
+    "#in the list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TRAVERSING DICTIONARIES"
    ]
   },
   {
